--- a/TASK1- PREDICTION USING SUPERVISED ML.ipynb
+++ b/TASK1- PREDICTION USING SUPERVISED ML.ipynb
@@ -8,10 +8,24 @@
     "# The Sparks Foundation-Grip-Data Science and Business Analytics Sept'23\n",
     "## Task 1:Prediction Using Supervised ML\n",
     "\n",
+    " In this task it is required to predict the percentage of a student on the basis of number of hours studied using the Linear Regression supervised machine learning algorithm.\n",
+    " \n",
+    "\n",
+    "Steps:
+Step 1 - Importing the dataset\n
+Step 2 - Visualizing the dataset\n
+Step 3 - Data preparation\n
+Step 4 - Training the algorithm\n
+Step 5 - Visualizing the model\n
+Step 6 - Making predcitions\n
+Step 7 - Evaluating the model\n"
+    "\n",
     " Author: Shraddha Majumdar\n",
     " \n",
     " Dataset used: Student Scores\n",
     " \n",
+   
+   
     " Download Link: https://github.com/SHRADDHAMAJUMDAR/TASK-1"
    ]
   },
